infra/kubernetes/manifests/laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  labels:
    app: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: us-central1-docker.pkg.dev/ftrick-455901/ftrick-laravel/ftrick-laravel:latest
          ports:
            - containerPort: 80  # Cambiado de 9000 a 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
