infra/kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app
spec:
  selector:
    app: laravel-app
  ports:
  - port: 80
    targetPort: 9000
  type: ClusterIP
